--- a/boot01/src/main/resources/templates/test.html
+++ b/boot01/src/main/resources/templates/test.html
@@ -7,8 +7,26 @@
 <body>
 	<h1>타임리프 테스트</h1>
 	<!-- thymeleaf, 유일한 태그 -->
+	<!--/* [[  ]] == `  ` */-->
 	<th:block th:each=" num : ${ #numbers.sequence(1,5) } ">
 		<p th:text="${num}"></p>
 	</th:block>
+	
+	<!--/* 타임리프 기본방식 
+			1) th:속성 = "${}"
+			2) 	th:src = "@{}" or 
+				th:href = "@{}" or 
+				th:action = "@{}"
+	 */-->
+	 
+	 <a th:href="@{/empList}" th:text="${'전체조회'}"></a>
+	 <a href="/empList">전체조회</a>
+	 
+	 <hr>
+	 
+	 <p>사원정보 : [[ ${empInfo} ]]</p>
+	 <p th:text="${'사원정보 : ' + empInfo}"></p>
+	 <p th:id="${empInfo.employeeId}"
+	 	th:name="${empInfo.lastName}">[[${empInfo.jobId}]], [[${empInfo.departmentId}]]</p>
 </body>
 </html>
