--- a/boot01/src/main/resources/templates/emp/info.html
+++ b/boot01/src/main/resources/templates/emp/info.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko" xmlns:th="https://www.thymeleaf.org/">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
 </head>
+
 <body>
-	<h1>단건조회</h1>
+	<div class="container">
+		<h3>사원 정보 조회</h3>
+		<div>
+			<label class="form-label" for="eid">사원번호</label>
+			<input class="form-control" type="text" id="eid" th:value="${emp.employeeId}" readonly>
+		</div>
+		<div>
+			<label for="ename">이름</label>
+			<input class="form-control" type="text" id="ename" th:value="${emp.firstName}" readonly>
+		</div>
+		<div>
+			<label for="email">이메일</label>
+			<input class="form-control" type="email" id="email" th:value="${emp.email}" readonly>
+		</div>
+		<div>
+			<label for="hDate">입사일</label>
+			<input class="form-control" type="date" id="hDate" th:value="${#dates.format(emp.hireDate, 'yyyy-MM-dd')}"
+				readonly>
+		</div>
+		<div>
+			<label for="job">업무</label>
+			<input class="form-control" type="text" id="job" th:value="${emp.jobId}" readonly>
+		</div>
+		<div>
+			<label for="sal">급여</label>
+			<input class="form-control" type="number" id="sal" th:value="${emp.salary}" readonly>
+		</div>
+		<div>
+			<button type="button" class="btn btn-primary"
+				th:onclick="|location.href='@{/empUpdate(employeeId=${emp.employeeId})}'|">수정</button>
+			<button type="button" class="btn btn-success" th:onclick="|location.href='@{/empList}'|">목록</button>
+			<button type="button" class="btn btn-danger"
+				th:onclick="|location.href='@{/empDelete(employeeId=${emp.employeeId})}'|">삭제</button>
+		</div>
+	</div>
 </body>
+
 </html>
