--- a/boot01/src/main/resources/templates/emp/list.html
+++ b/boot01/src/main/resources/templates/emp/list.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko" xmlns:th="https://www.thymeleaf.org/">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<!-- <meta name="contextPath" th:value="${#httpServletRequest.getContextPath()}"> -->
+	<meta name="contextPath" th:value="${contextPath}">
+	<title>Insert title here</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
+
 <body>
-	<h1>전체조회</h1>
+	<div class="container">
+		<h3>전체 사원 조회</h3>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>No.</th>
+					<th>사원번호</th>
+					<th>이름</th>
+					<th>입사날짜</th>
+					<th>업무</th>
+				</tr>
+			</thead>
+			<tbody>
+				<!-- <tr th:onclick="|location.href='@{/empInfo(employeeId=${emp.employeeId})}'|"> -->
+				<th:block th:each="emp, state : ${emps}">
+					<tr>
+						<td>[[ ${state.count} ]]</td>
+						<td th:text="${emp.employeeId}"></td>
+						<td th:text="${emp.firstName}"></td>
+						<!--/* <td>[[ ${emp.hireDate} ]]</td> */-->
+						<td>[[ ${#dates.format(emp.hireDate, 'yyyy년 MM월 dd일')} ]]</td>
+						<td>[[ ${emp.jobId} ]]</td>
+					</tr>
+				</th:block>
+			</tbody>
+		</table>
+	</div>
+	<script>
+		const contextPath = $('meta[name="contextPath"]').attr('value');
+		$('tbody > tr').on('click', function (e) {
+			let eid = $(e.currentTarget).children().eq(1).text();
+			let url = contextPath + "/empInfo?employeeId=" + eid;
+			location.href = url;
+		})
+	</script>
 </body>
+
 </html>
