--- a/boot01/src/main/resources/templates/all.html
+++ b/boot01/src/main/resources/templates/all.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="https://www.thymeleaf.org/">
+<html lang="ko" xmlns:th="https://www.thymeleaf.org/" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 
 <head>
 	<meta charset="UTF-8">
+	<!-- <meta name="_csrf" th:value="${_csef.token}"> -->
 	<title>Insert title here</title>
 </head>
 
@@ -10,8 +11,16 @@
 	<h1>메인 페이지입니다.</h1>
 	<ul>
 		<li><a th:href="@{/user}">일반 사용자용 페이지로</a></li>
-		<li><a th:href="@{/admin}">관리자 전용 페이지로</a></li>
+		<li sec:authorize="hasRole('ADMIN')">
+			<a th:href="@{/admin}">관리자 전용 페이지로</a>
+		</li>
 	</ul>
+
+	<th:block sec:authorize="isAuthenticated()">
+		<p sec:authentication="name"></p>
+		<p sec:authentication="principal.username"></p>
+		<p sec:authentication="principal.authorities"></p>
+	</th:block>
 	<form th:action="@{/logout}" method="post">
 		<button type="submit">로그아웃</button>
 	</form>
